Allow highlight info wrapper shrink to avoid overflow

--- a/packages/theme/src/client/styles/home/highlight-panel.scss
+++ b/packages/theme/src/client/styles/home/highlight-panel.scss
@@ -101,7 +101,7 @@
   }
 
   &:only-child {
-    flex: 1 0 100%;
+    flex: 1 1 100%;
   }
 }
 
